<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, rapidandroid</string>
    <string name="app_name">RapidAndroid</string>
<string name="lbl_formname">Name</string>
<string name="lbl_description">Description</string>
<string name="lbl_formprefix">Prefix</string>
<string name="lbl_formchoose">Forms:</string>
<string name="lbl_dashboardmessages">Recent Messages:</string>
<string name="dashboard_menu_create">Create Form</string>
<string name="dashboard_menu_edit">View Form</string>
<string name="dashboard_menu_view">Show Charts</string>
<string name="formeditor_menu_cancel">Cancel</string>
<string name="formeditor_menu_save">Save</string>
<string name="formeditor_menu_add_field">Add Field</string>
<string name="dashboard_menu_show_reports">Reports</string>
<string name="menu_done">Finished</string>
<string name="lbl_fieldname">Name:</string>
<string name="lbl_fieldprompt">Description:</string>
<string name="lbl_fieldtypechoose">Field Type:</string>
<string name="lbl_fields">Fields:</string>

<string name="btn_finishaddfield">Add</string>
<string name="btn_canceladdfield">Cancel</string>

<string name="formreview_menu_done">Done</string>
<string name="formreview_menu_format">Show Example</string>
<string name="chart_menu_done">Done</string>
<string name="chart_menu_change_variable">Change Variable</string>
<string name="chart_menu_change_parameters">Change Date Range</string>
<string name="formreview_dump_csv">Output CSV</string>
<string name="formreview_upload_csv">Upload Report</string>
<string name="lbl_enddate">End date:</string>
<string name="lbl_startdate">Start date:</string>
<string name="range_btn_lastweek">Last Week</string>
<string name="range_btn_lastmonth">Last Month</string>
<string name="range_btn_lastday">Last Day</string>

<string name="lbl_totaldaterange">Total Daterange:</string>
<string name="lbl_chart_chartsubject">Chart Subject:</string>
<string name="lbl_chart_datasummary">Data Summary:</string>
<string name="lbl_chart_totalmessages">Total Messages:</string>
<string name="btn_daterange_startdate">Start Date</string>
<string name="btn_daterange_enddate">End Date</string>
<string name="range_btn_lastthreemonth">Three Months</string>
<string name="btn_entire_range">Entire Range</string>
<string name="rad_last100">Last 100</string>
<string name="rad_last500">Last 500</string>
<string name="rad_all">All</string>
<string name="glbsettings_parse_ack">Successful Parse Reply</string>
<string name="glbsettings_noparse_ack">Failed Parse Reply</string>
<string name="glb_chk_noparse_text">Reply on failed parses</string>
<string name="glb_chk_parse_text">Reply on successful parses</string>
<string name="glbsettings_heading">Global reply settings</string>
<string name="glb_lbl_activeall">Activate all SMS features</string>
</resources>
