<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:id="@+id/widget28"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="?android:attr/listSeparatorTextViewStyle"
				android:text="@string/lbl_formname" android:id="@+id/lbl_formname" android:layout_weight="1">
			</TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="?android:attr/listSeparatorTextViewStyle"
				android:text="@string/lbl_formprefix" android:id="@+id/lbl_formprefix" android:layout_weight="1">
			</TextView>

		</TableRow>

		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<EditText android:id="@+id/etx_formname"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="14sp" android:layout_weight="1"></EditText>


<EditText
android:id="@+id/etx_formprefix"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:textSize="14sp"
android:layout_weight="1"></EditText>
        
        </TableRow>
        <TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
style="?android:attr/listSeparatorTextViewStyle"
android:text="@string/lbl_description"
android:id="@+id/lbl_description">
</TextView>
<EditText
android:id="@+id/etx_description"
android:layout_width="fill_parent"
android:textSize="14sp"
android:singleLine="false"
android:gravity="top" android:layout_height="65px"></EditText>
</TableLayout>


<LinearLayout
android:id="@+id/FormFieldsLayout"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical" >
<TextView
android:layout_width="fill_parent"
android:layout_height="wrap_content"
style="?android:attr/listSeparatorTextViewStyle"
android:text="@string/lbl_fields"
android:id="@+id/lbl_fields">
</TextView>
<ListView
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:id="@+id/lsv_createfields">
</ListView>
</LinearLayout>
</LinearLayout>
